# text_analysis

./: CLAUDE.md  Dockerfile  Dockerfile.vllm  README.md  config.yaml  discovered_labels.json  docker-compose.yml  down.sh  pyproject.toml  start.sh  stop.sh
frontend/: Dockerfile  nginx.conf
frontend/static/: index.html
model_server/: Dockerfile  Dockerfile.vllm  handlers.py  requirements.txt  server.py
nrc_server/: Dockerfile  requirements.txt  server.py
observability/: prometheus.yml
observability/grafana/dashboards/: sentiment.json  text_analysis.json
observability/grafana/provisioning/dashboards/: dashboard.yml
src/sentiment/: config.py  main.py  registry.py
src/sentiment/api/: routes.py
src/sentiment/clients/: base.py  model_server.py  vllm.py
src/sentiment/observability/: logging.py  metrics.py
src/text_analysis/: __init__.py  config.py  main.py  registry.py
src/text_analysis/api/: routes.py
src/text_analysis/clients/: base.py  model_server.py  vllm.py
src/text_analysis/observability/: metrics.py
tests/: conftest.py  test_clients.py  test_integration.py  test_routes.py
tests/fixtures/: config.yaml
vader_server/: requirements.txt  server.py
